# exchange_rate_telegram_bot

./: .gitignore  README.md  pyproject.toml
scr/: exchange_rate.py  telegram_bot.py
utils/: currency_symbols.py
