[tool.poetry]
name = "exchange-rates"
version = "0.1.0"
description = "the project provides for the conversion of any currency to the ruble"
authors = ["Dmitrii <dima12sik@yandex.ru>"]
readme = "README.md"
packages = [{include = "exchange_rates"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
telebot = "^0.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
